--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmw_fastrtps_cpp
-	previous = 
-	base = 916791145ccc
+	previous = 916791145ccc
+	base = 30c4e07a93e7
 	trim = 
 	trimbase = 
