--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmw_fastrtps_shared_cpp
-	previous = 
-	base = 78883c2dbec3
+	previous = 78883c2dbec3
+	base = 8064fa7d11e9
 	trim = 
 	trimbase = 
