--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmw_fastrtps_dynamic_cpp
-	previous = 
-	base = b6e19bc480c8
+	previous = b6e19bc480c8
+	base = ea33258116e2
 	trim = 
 	trimbase = 
