--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rmw_fastrtps_shared_cpp
+	parent = release/rolling/rmw_fastrtps_shared_cpp/8.2.0-2
 	previous = 78883c2dbec3
 	base = be888bca9388
 	trim = 
