--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rmw_fastrtps_cpp
+	parent = release/rolling/rmw_fastrtps_cpp/8.2.0-2
 	previous = 916791145ccc
 	base = c53e4d2473cb
 	trim = 
