--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rmw_fastrtps_dynamic_cpp
+	parent = release/rolling/rmw_fastrtps_dynamic_cpp/8.2.0-2
 	previous = b6e19bc480c8
 	base = 1c9b3682b4ee
 	trim = 
